--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "quote-machine-app",
   "version": "0.1.0",
+  "homepage": "https://{bedribulut}.github.io/{quote-machine-app}",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
@@ -18,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,6 +45,8 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "sass": "^1.58.3"
   }
+
 }
