--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quote-machine-app",
   "version": "0.1.0",
-  "homepage": "https://{bedribulut}.github.io/{quote-machine-app}",
+  "homepage": "https://bedribulut.github.io/quote-machine-app",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
